Added neighbors parameter and fixed parameters which are also @rids to use the orientjs.RID class
